# spring

./: .gitignore  AGENTS.md  CMakeLists.txt  ClassDefined.h  ClockDialog.cpp  ClockDialog.h  ClockDialog.ui  CollidingRectItem.cpp  CollidingRectItem.h  CommonFile.h  CutSolidVerticalLine.cpp  CutSolidVerticalLine.h  DMXLightDialog.cpp  DMXLightDialog.h  DMXLightDialog.ui  DeviceInfo.cpp  DeviceInfo.h  DominoSetting.cpp  DominoSetting.h  DominoSetting.ui  ElecDeviceRectItem.cpp  ElecDeviceRectItem.h  ElecDeviceShowWidget.cpp  ElecDeviceShowWidget.h  ElecDeviceShowWidget.ui  ElectToolButton.cpp  ElectToolButton.h  GraphicsSceneBase.cpp  GraphicsSceneBase.h  GraphicsViewMenu.cpp  GraphicsViewMenu.h  LockCode.h  MovableVerticalLine.cpp  MovableVerticalLine.h  MusicGraphicsView.cpp  MusicGraphicsView.h  MusicWidget.cpp  MusicWidget.h  OrbitDialog.cpp  OrbitDialog.h  (+101 more)
Model/Track/: track.cpp  track.h
QGLWater/x64/Debug/qt/qmake/: props.txt  qtvars.vcxproj  qtvars.xml
Refactor/Audio/: AudioPlayer.cpp  AudioPlayer.h  FmodAudioPlayer.cpp  FmodAudioPlayer.h
cfgtemp/hardware/: example.lic.cert  example.run  pcuser.data
debug/: config.ini  del.bat  pingcfg.ini  water.db_orignal
debug/data/: 1.glw  2014明道展厅灯光秀.glw  SteveGlen.glw  Victory.glw  关大洲 - 鹤冲天.glw  测试2.glw  测试4.glw  程响 - 世界这么大还是遇见你.glw
docs/: 2026-03-14-qt6-8-3-migration-changes.md  2026-03-14-work-summary.md  2026-03-15-qmedia-to-fmod-merge-design.md  2026-03-15-qmedia-to-fmod-merge.md
docs/plans/: 2026-03-16-fix-vcxproj-x64-fmod-linking.md
pictures/DWCP/: 第二次测试.lsd
release/: QGLWater_resource.rc  config.ini  del.bat
release/data/: 1MP3.glw  2014明道展厅灯光秀.glw  Beyond.glw  关大洲 - 鹤冲天1.glw  少女的祈祷.glw  撷萃漫想mp3.glw
tests/: check_audio_backend_migration.sh  check_route_schema.sh  check_vcxproj_x64_fmod_linking.sh
vendors/libartnet/x64/lib/: libartnet.lib
vendors/libartnet/x86/include/artnet/: packets.h
vendors/libartnet/x86/lib/: libartnet.lib
vendors/mbedtls/x64/lib/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib
vendors/mbedtls/x86/lib/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib
vendors/rtmidi/x64/lib/: rtmidi.lib
vendors/rtmidi/x64/lib/pkgconfig/: rtmidi.pc
vendors/rtmidi/x86/lib/: rtmidi.lib
vendors/rtmidi/x86/lib/pkgconfig/: rtmidi.pc
vendors/rtmidi/x86/share/rtmidi/: RtMidiTargets.cmake
vendors/sACN/x64/include/etcpal/cpp/: queue.h
vendors/sACN/x64/lib/: EtcPal.lib  sACN.lib
vendors/sACN/x64/lib/pkgconfig/: EtcPal.pc
vendors/sACN/x86/lib/: EtcPal.lib  sACN.lib
vendors/sACN/x86/lib/pkgconfig/: EtcPal.pc
vendors/spdlog/x64/lib/pkgconfig/: spdlog.pc
vendors/spdlog/x86/lib/cmake/spdlog/: spdlogConfigVersion.cmake
vendors/spdlog/x86/lib/pkgconfig/: spdlog.pc
vendors/yaml-cpp/x64/lib/: yaml-cpp.lib
vendors/yaml-cpp/x64/lib/pkgconfig/: yaml-cpp.pc
vendors/yaml-cpp/x86/lib/: yaml-cpp.lib
vendors/yaml-cpp/x86/lib/pkgconfig/: yaml-cpp.pc
